--- a/sesion07/pom.xml
+++ b/sesion07/pom.xml
@@ -136,7 +136,34 @@
 				<artifactId>maven-project-info-reports-plugin</artifactId>
 				<version>3.0.0</version>
 			</plugin>
-			
+			<plugin>
+                		<groupId>org.owasp</groupId>
+                		<artifactId>dependency‐check‐maven</artifactId>
+                		<version>5.3.2</version>
+        			<configuration>
+					<skipTestScope>false</skipTestScope>
+					<formats> 
+            					<format>HTML</format>
+            					<format>XML</format>
+          				</formats>
+    					<scanSet>
+        					<fileSet>
+          						<directory>${project.basedir}</directory>
+          						<includes>
+								<include>${project.basedir}/test/**/*.java</include>
+								<include>${project.basedir}/src/**/*.java</include>
+     							</includes>
+    						</fileSet>
+   					</scanSet>
+    				</configuration>
+                		<reportSets>
+                    			<reportSet>
+                        			<reports>
+                            				<report>aggregate</report>
+                        			</reports>
+                    			</reportSet>
+               			 </reportSets>
+            		</plugin>
 		</plugins>
 	</reporting>
 
