--- a/sesion07/pom.xml
+++ b/sesion07/pom.xml
@@ -140,13 +140,13 @@
               			<groupId>org.owasp</groupId>
               			<artifactId>dependency-check-maven</artifactId>
               			<version>5.3.2</version>
-              			<executions>
-                  			<execution>
-                      				<goals>
-                          				<goal>check</goal>
-                      				</goals>
-                  			</execution>
-              			</executions>
+              			<reportSets>
+                    			<reportSet>
+                        			<reports>
+                            				<report>aggregate</report>
+                        			</reports>
+                    			</reportSet>
+                		</reportSets>
             		</plugin>
 		</plugins>
 	</reporting>
