--- a/sesion07/pom.xml
+++ b/sesion07/pom.xml
@@ -140,6 +140,13 @@
               			<groupId>org.owasp</groupId>
               			<artifactId>dependency-check-maven</artifactId>
               			<version>5.3.2</version>
+				<configuration>
+					<skipTestScope>false</skipTestScope>
+					<formats> 
+           					<format>HTML</format>
+            					<format>XML</format>
+          				</formats>
+				</configuration>
               			<reportSets>
                     			<reportSet>
                         			<reports>
